added nav icon and mobile support

--- a/css/app.css
+++ b/css/app.css
@@ -171,3 +171,12 @@ p + p {
 	display: inline-block;
 	padding-left: 10px;
 }
+
+@media (max-width: 550px) {
+	.sticky-nav {
+		display: none;
+	}
+	header {
+		padding-top: 30px;
+	}
+}
